# desk-navbar-extended

./: .flake8  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
desk_navbar_extended/: hooks.py  modules.txt  setup.py
desk_navbar_extended/public/js/: desk_navbar_extended.js
