[project]
name = "desk_navbar_extended"
authors = [
    { name = "Gavin D'souza", email = "gavin18d@gmail.com"}
]
description = "Tweaks in Desk's Navbar to boost Productivity"
requires-python = ">=3.8"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # frappe -- https://github.com/frappe/frappe is installed via 'bench init'
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
